--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^6.8.0"
   },
