Add FAQ page with SEO optimization and complete translations
- Add comprehensive FAQ page with 16 categorized questions
- Implement accordion-style interactive FAQ interface
- Add Turkish and English translations for FAQ content
- Update sitemap.xml with FAQ page entry
- Add FAQ navigation link to navbar
- Update package.json keywords for better SEO
- Update README.md with new features and pages
- Optimize FAQ page with structured data for search engines
- Add parliament-blue and light-green color scheme
- Include responsive design for mobile devices

--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "keywords": [
     "react",
     "bootstrap",
-    "webpack"
+    "webpack",
+    "drilling",
+    "blasting",
+    "MWD",
+    "FAQ",
+    "construction",
+    "mining"
   ],
   "author": "Emirhan Koç",
   "license": "MIT",
